--- a/CustomizableWordpad/package.json
+++ b/CustomizableWordpad/package.json
@@ -8,6 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@flyerhq/react-native-keyboard-accessory-view": "^2.1.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
@@ -16,8 +20,10 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-highlight-words": "^1.0.1",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
