--- a/CustomizableWordpad/package.json
+++ b/CustomizableWordpad/package.json
@@ -28,12 +28,15 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-bouncy-checkbox": "^2.1.0",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
